fix mobile menu spacing

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -246,13 +246,15 @@ header{
                     height:calc(100vh - 60.75px);
                     overflow: scroll;
                     background:$white;
+                    align-content: baseline;
+                    position: relative;
 
                     li{
                         width:100%;
 
                         a{
                             margin-left:0;
-                            padding:1rem 1rem 1rem 1rem;
+                            padding:.5rem;
                             width:100%;
                             display: block;
 
@@ -274,6 +276,15 @@ header{
                             width: 100%;
                             margin:0;
                             padding:0;
+
+                            li:last-of-type{
+                                position:fixed;
+                                bottom:0;
+
+                                a{
+                                    padding:1rem;
+                                }
+                            }
 
                             a{
                                 padding-left:3rem;
